# drops

./: .gitignore  0_car.py  0_car_w_tas.py  1_car.py  2_car.py  404.html  99_car.py  README.md  __main__ car.py  __main__.py  admin.md  index.html  main_movie_renege.py  mkdocs.yml  pyproject.toml  rec_recorder.py  sitemap.xml  thread_and_server.py
arch/: index.html
docs/: arch.md  flask_and_drops.md  how_to_recipes.md  index.md  inst.md
docs/learn/: index.md
docs_src/: hello.py
docs_src/car_wash/: 001.py  002.py  003.py
examples/alice/: scenario.json
examples/alice/model/: alice.py  members.py  vendor.py
examples/aliceandbob/model/: alice.py  members.py  messages.py  vender.py
examples/car_parking_system/: main_model.py
examples/car_wash/model/: controler.py  members.py  messages.py  washing_line.py
examples/movie_renege/: README.md
examples/movie_renege/model/: members.py  messages.py  moviegoer.py  theater.py
examples/single_file_example/: 0_car_w_tas.py  1_car.py  car_0.py
flask_and_drops/: index.html
how_to_recipes/: index.html
inst/: index.html
learn/: index.html
model/: alice.py  bob.py  members.py  messages.py
search/: search_index.json
src/: _core.py  core.py  drops.py
src/drops/: __init__.py  core.py  drops.py  drops_old.py  flopsy.py  futures.py
src/drops/conf/: component.py.jinja2
src/templates/project_template/: settings.py
tests/: test_drops.py
tests/examples/car_wash/: __init__.py  (+6 more)
tests/integration/: test_car_0.py  test_methods.py
tests/unit/: test_car_wash.py  test_shop.py
tutorial/: 0_introduction.md
(+13 files in other folders)
