[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Drops"
version = "0.1"
authors = [
    { name = "Erik J Kostic" }
]
description = "Event and Message Queue"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eineruntervielen/drops"
[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mypy==0.982",
    "black==22.10.0"
]
[tool.mypy]
strict = true
